--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
   "description": "A simple family attendance tracking application.",
   "icons": [
     {
-      "src": "icon-192.svg",
+      "src": "196.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "icon-512.svg",
+      "src": "512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ]
 }
